--- a/src/pages/admin/index.css
+++ b/src/pages/admin/index.css
@@ -5,10 +5,14 @@
 }
 
 .site-layout-sub-header-background {
-  background: #fff;
+  background: #001529;
 }
 
 .site-layout-background {
   background: #fff;
 }
-  
+
+.site-layout-sub-footer-background {
+  background: #001529;
+  color: #fff
+}
